--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+source 'https://github.com/CocoaPods/Specs.git' # removes warning: https://blog.cocoapods.org/CocoaPods-1.7.2/
+
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
